v1.0.0/modules/schema/pages/class/ResourceAwardInstruction.adoc
= `ResourceAwardInstruction`
:toclevels: 4


+++Model of market results, instruction for resource.  Contains details of award as attributes.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ResourceAwardInstruction`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* *`ResourceAwardInstruction`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
ResourceAwardInstruction {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



SelfScheduleBreakdown {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



RegisteredResource {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ResourceAwardClearing {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketProduct {
  style {
    fill: "#fffbef"
    shadow: true
  }
}




ResourceAwardInstruction -> SelfScheduleBreakdown: SelfScheduleBreakdown


ResourceAwardInstruction -> RegisteredResource: RegisteredResource


ResourceAwardInstruction -> ResourceAwardClearing: ClearingResourceAward


ResourceAwardInstruction -> MarketProduct: MarketProduct


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<MarketProduct,`MarketProduct`>>
| 1
| xref::class/MarketProduct.adoc[`MarketProduct`]
| n/a

| <<ClearingResourceAward,`ClearingResourceAward`>>
| 1..*
| xref::class/ResourceAwardClearing.adoc[`ResourceAwardClearing`]
| n/a

| <<RegisteredResource,`RegisteredResource`>>
| 0..1
| xref::class/RegisteredResource.adoc[`RegisteredResource`]
| n/a

| <<awardMW,`awardMW`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++For DA Energy: Not Applicable;   

For DA AS: DA AS market award;   

For RT Energy: Not Applicable;   

For RT AS: RT AS market award (excluding DA AS market or self-proviison awards)+++

| <<clearedMW,`clearedMW`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++For DA Energy: Total Schedule = DA market schedule + DA self-schedule award;   

For DA AS: DA Ancillary Service Awards = DA AS market award + DA AS self-provision award;   

For RT Energy: Total Schedule = RT market schedule + RT self-schedule award;   

For RT AS: RT Ancillary Service Awards = RT AS self-provision award + RT AS market award + DA AS market award + DA AS self-provision award;+++

| <<clearedPrice,`clearedPrice`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Marginal Price ($/MW) for the commodity (Regulation Up, Regulation Down, Spinning Reserve, or Non-spinning reserve) for pricing run.+++

| <<congestLMP,`congestLMP`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Congestion component of Location Marginal Price (LMP) in monetary units per MW.+++

| <<costLMP,`costLMP`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Cost component of Locational Marginal Pricing (LMP) in monetary units per MW.+++

| <<dispatcherAddedMW,`dispatcherAddedMW`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++The tier2 mw added by dispatcher action 
Market results of the synchronized reserve market+++

| <<economicMax,`economicMax`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Unit max output for dispatch; bid in economic maximum+++

| <<economicMin,`economicMin`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Unit min output for dispatch; bid in economic minimum+++

| <<effRegulationDownLimit,`effRegulationDownLimit`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Effective Regulation Down Limit (MW)+++

| <<effRegulationUpLimit,`effRegulationUpLimit`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Effective Regulation Up Limit+++

| <<lmp,`lmp`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Locational marginal price value+++

| <<lossLMP,`lossLMP`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Loss component of Location Marginal Price (LMP) in monetary units per MW.+++

| <<manuallyBlocked,`manuallyBlocked`>>
| 0..1
| xref::enumeration/YesNo.adoc[`YesNo`]
| +++Indicates if an award was manually blocked (Y/N). Valid for Spinning and Non-spinning.+++

| <<marginalResourceIndicator,`marginalResourceIndicator`>>
| 0..1
| xref::enumeration/YesNo.adoc[`YesNo`]
| +++Indicator (Yes / No) that this resource set the price for this dispatch / schedule.+++

| <<mustRunInd,`mustRunInd`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Identifes if the unit was set to must run by the market participant responsible for bidding in the unit+++

| <<noLoadCost,`noLoadCost`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Unit no-load cost in case of energy commodity+++

| <<optimalBidCost,`optimalBidCost`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Optimal Bid cost+++

| <<optimalBidPay,`optimalBidPay`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Optimal Bid production payment based on LMP+++

| <<optimalMargin,`optimalMargin`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Optimal Bid production margin+++

| <<overrideTimeStamp,`overrideTimeStamp`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Time the manual data entry occured.+++

| <<overrideValue,`overrideValue`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Provides the ability for the grid operator to override items, such as spin capacity requirements, prior to running the algorithm. This value is market product based (spin, non-spin, reg up, reg down, or RUC).+++

| <<selfSchedMW,`selfSchedMW`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++For DA Energy: DA total self-schedule award;   
For DA AS: DA AS self-provision award;   
For RT Energy: RT total self-schedule award;   
For RT AS: RT AS self-provision award (excluding DA AS market or self-provision awards)+++

| <<startUpCost,`startUpCost`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Unit start up cost in case of energy commodity+++

| <<status,`status`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++In or out status of resource+++

| <<totalRevenue,`totalRevenue`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Total bid revenue (startup_cost + no_load_cost + bid_pay)+++

| <<updateTimeStamp,`updateTimeStamp`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| n/a

| <<updateType,`updateType`>>
| 0..1
| xref::enumeration/MQSCHGType.adoc[`MQSCHGType`]
| n/a

| <<updateUser,`updateUser`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| n/a

| <<SelfScheduleBreakdown,`SelfScheduleBreakdown`>>
| 0..*
| xref::class/SelfScheduleBreakdown.adoc[`SelfScheduleBreakdown`]
| n/a
|===

'''


//[discrete]
[#awardMW]
=== `awardMW`
+++For DA Energy: Not Applicable;   

For DA AS: DA AS market award;   

For RT Energy: Not Applicable;   

For RT AS: RT AS market award (excluding DA AS market or self-proviison awards)+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.awardMW`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#clearedMW]
=== `clearedMW`
+++For DA Energy: Total Schedule = DA market schedule + DA self-schedule award;   

For DA AS: DA Ancillary Service Awards = DA AS market award + DA AS self-provision award;   

For RT Energy: Total Schedule = RT market schedule + RT self-schedule award;   

For RT AS: RT Ancillary Service Awards = RT AS self-provision award + RT AS market award + DA AS market award + DA AS self-provision award;+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.clearedMW`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#clearedPrice]
=== `clearedPrice`
+++Marginal Price ($/MW) for the commodity (Regulation Up, Regulation Down, Spinning Reserve, or Non-spinning reserve) for pricing run.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.clearedPrice`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#ClearingResourceAward]
=== `ClearingResourceAward`


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.ClearingResourceAward`
| Cardinality
| 1..*
| Type
| xref::class/ResourceAwardClearing.adoc[`ResourceAwardClearing`]


|===

//[discrete]
[#congestLMP]
=== `congestLMP`
+++Congestion component of Location Marginal Price (LMP) in monetary units per MW.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.congestLMP`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#costLMP]
=== `costLMP`
+++Cost component of Locational Marginal Pricing (LMP) in monetary units per MW.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.costLMP`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#dispatcherAddedMW]
=== `dispatcherAddedMW`
+++The tier2 mw added by dispatcher action 
Market results of the synchronized reserve market+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.dispatcherAddedMW`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#economicMax]
=== `economicMax`
+++Unit max output for dispatch; bid in economic maximum+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.economicMax`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#economicMin]
=== `economicMin`
+++Unit min output for dispatch; bid in economic minimum+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.economicMin`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#effRegulationDownLimit]
=== `effRegulationDownLimit`
+++Effective Regulation Down Limit (MW)+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.effRegulationDownLimit`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#effRegulationUpLimit]
=== `effRegulationUpLimit`
+++Effective Regulation Up Limit+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.effRegulationUpLimit`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#lmp]
=== `lmp`
+++Locational marginal price value+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.lmp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#lossLMP]
=== `lossLMP`
+++Loss component of Location Marginal Price (LMP) in monetary units per MW.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.lossLMP`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#manuallyBlocked]
=== `manuallyBlocked`
+++Indicates if an award was manually blocked (Y/N). Valid for Spinning and Non-spinning.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.manuallyBlocked`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

//[discrete]
[#marginalResourceIndicator]
=== `marginalResourceIndicator`
+++Indicator (Yes / No) that this resource set the price for this dispatch / schedule.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.marginalResourceIndicator`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

//[discrete]
[#MarketProduct]
=== `MarketProduct`


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.MarketProduct`
| Cardinality
| 1
| Type
| xref::class/MarketProduct.adoc[`MarketProduct`]


|===

//[discrete]
[#mustRunInd]
=== `mustRunInd`
+++Identifes if the unit was set to must run by the market participant responsible for bidding in the unit+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.mustRunInd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#noLoadCost]
=== `noLoadCost`
+++Unit no-load cost in case of energy commodity+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.noLoadCost`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#optimalBidCost]
=== `optimalBidCost`
+++Optimal Bid cost+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.optimalBidCost`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#optimalBidPay]
=== `optimalBidPay`
+++Optimal Bid production payment based on LMP+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.optimalBidPay`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#optimalMargin]
=== `optimalMargin`
+++Optimal Bid production margin+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.optimalMargin`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#overrideTimeStamp]
=== `overrideTimeStamp`
+++Time the manual data entry occured.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.overrideTimeStamp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#overrideValue]
=== `overrideValue`
+++Provides the ability for the grid operator to override items, such as spin capacity requirements, prior to running the algorithm. This value is market product based (spin, non-spin, reg up, reg down, or RUC).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.overrideValue`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#RegisteredResource]
=== `RegisteredResource`


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.RegisteredResource`
| Cardinality
| 0..1
| Type
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

//[discrete]
[#selfSchedMW]
=== `selfSchedMW`
+++For DA Energy: DA total self-schedule award;   
For DA AS: DA AS self-provision award;   
For RT Energy: RT total self-schedule award;   
For RT AS: RT AS self-provision award (excluding DA AS market or self-provision awards)+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.selfSchedMW`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#SelfScheduleBreakdown]
=== `SelfScheduleBreakdown`


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.SelfScheduleBreakdown`
| Cardinality
| 0..*
| Type
| xref::class/SelfScheduleBreakdown.adoc[`SelfScheduleBreakdown`]


|===

//[discrete]
[#startUpCost]
=== `startUpCost`
+++Unit start up cost in case of energy commodity+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.startUpCost`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#status]
=== `status`
+++In or out status of resource+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.status`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#totalRevenue]
=== `totalRevenue`
+++Total bid revenue (startup_cost + no_load_cost + bid_pay)+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.totalRevenue`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#updateTimeStamp]
=== `updateTimeStamp`


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.updateTimeStamp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#updateType]
=== `updateType`


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.updateType`
| Cardinality
| 0..1
| Type
| xref::enumeration/MQSCHGType.adoc[`MQSCHGType`]


|===

//[discrete]
[#updateUser]
=== `updateUser`


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceAwardInstruction.updateUser`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===


